Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#416 closed bug (fixed)

default button in modal window don't always work

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

default button in modal window don't always work if you press enter. Test case Terminal. Launch it and go to About Terminal, there is only only one button and it's default one. Pressing enter will close this window and that is ok. Now, go to About Terminal again and try to press enter again, it won't.

On a related note, About Terminal isn't font sensitive, look at "Murai".

Change History (5)

comment:1 by axeld, 19 years ago

I can reproduce this. But the "About Terminal" window is font sensitive - that's why Murai is on the next line and not cut off :-) Maybe B_WIDTH_FROM_WIDEST would help, I'll try.

comment:2 by axeld, 19 years ago

Status: newclosed

comment:3 by axeld, 19 years ago

Fixed in hrev17141 - the keyboard filter compared targets by pointer; if the new target had the same pointer as the previous one, it would not been reset, and thus the EventDispatcher would drop the event.

The B_WIDTH_FROM_WIDEST only affect the button width, not the alert width - we'll should have a look at this problem to solve it generally.

comment:4 by axeld, 19 years ago

Resolution: fixed

comment:5 by axeld, 19 years ago

blocked: 409
Note: See TracTickets for help on using tickets.