src/servers/app/EventDispatcher.h
@@ -57,6 +57,7 @@ class EventFilter {
 	public:
 		virtual filter_result Filter(BMessage* event, EventTarget** _target,
 			int32* _viewToken = NULL, BMessage* latestMouseMoved = NULL) = 0;
+		virtual void RemoveTarget(EventTarget* target);
 };
 
 class EventDispatcher : public BLocker {
